# kancolle-a

./: Cargo.toml
.github/workflows/: ci.yml
crates/kancolla-a-cli-tools/: Cargo.toml
crates/kancolla-a-cli-tools/src/: cli_helpers.rs  lib.rs
crates/kancolle-a/: Cargo.toml
crates/kancolle-a-cli-tools/: Cargo.toml
crates/kancolle-a-cli-tools/src/: dirty_ship_sorter.rs  lib.rs
crates/kancolle-a/src/: error.rs  lib.rs  ships.rs
crates/kancolle-a/src/importer/: kancolle_arcade_net.rs
crates/kancolle-a/src/importer/kancolle_arcade_net/: api_client.rs  character_list.rs  kekkonkakkokari.rs  place.rs  tc_book.rs
crates/kancolle-a/src/importer/kancolle_arcade_net/api_client/: cookie_helper.rs  cookie_helper_wasm32.rs
crates/kancolle-a/src/importer/kancolle_arcade_net/blueprint_list/: tests.rs
crates/kancolle-a/src/importer/kancolle_arcade_net/character_list/: tests.rs
crates/kancolle-a/src/importer/kancolle_arcade_net/tc_book/: tests.rs
crates/kancolle-a/src/importer/wikiwiki_jp_kancolle_a/: kansen_table.rs
crates/kancolle-a/src/importer/wikiwiki_jp_kancolle_a/kansen_table/: tests.rs  改造艦船_テーブル.txt  艦船_テーブル.txt
crates/kancolle-a/src/ships/: tests.rs
crates/kancolle-a/tests/: ships.rs
crates/kancolle-a/tests/fixtures/2024-05-30/: BlueprintList_info.json  TcBook_info.json
crates/kancolle-a/tests/fixtures/2024-06-09/: TcBook_info.json
crates/kancolle-a/tests/fixtures/2024-06-20/: BlueprintList_info.json
crates/kancolle-a/tests/fixtures/2024-06-23/: BlueprintList_info.json  Place_places.json
crates/kancolle-a/tests/fixtures/2024-07-26/: CharacterList_info.json
crates/kancolle-a/tests/fixtures/2024-09-08/: 改造艦船_テーブル.txt
crates/kancolle-a/tests/fixtures/2024-10-31/: CharacterList_info.json
crates/kancolle-a/tests/fixtures/latest/: AimeCampaign_hold.json  AimeCampaign_info.json  Area_captureInfo.json  BlueprintList_info.json  CharacterList_info.json  EpFes_hold.json  EpFes_progress.json  EquipBook_info.json  EquipList_info.json  Event_hold.json  Event_info.json  Exercise_info.json  Personal_basicInfo.json  Place_places.json  Quest_info.json  Ranking_monthly_current.json  Ranking_monthly_prev.json  Ranking_total.json  RoomItemList_info.json  TcBook_info.json
src/: cli_helpers.rs  lib.rs  ships.rs
src/importer/: kancolle_arcade_net.rs  wikiwiki_jp_kancolle_a.rs
src/importer/kancolle_arcade_net/: api_client.rs  blueprint_list.rs  kekkonkakkokari.rs  place.rs  tc_book.rs
src/importer/kancolle_arcade_net/blueprint_list/: tests.rs
src/importer/kancolle_arcade_net/character_list/: tests.rs
src/importer/kancolle_arcade_net/kekkonkakkokari/: tests.rs
src/importer/kancolle_arcade_net/place/: tests.rs
src/importer/kancolle_arcade_net/tc_book/: tests.rs
src/importer/wikiwiki_jp_kancolle_a/: kansen_table.rs  serde_table.rs
src/importer/wikiwiki_jp_kancolle_a/kansen_table/: tests.rs
src/importer/wikiwiki_jp_kancolle_a/serde_table/: de.rs  error.rs  tests.rs
tests/: blueprintlist_test.rs  kekkonkakkokari_test.rs  place_test.rs  ships.rs  tcbook_test.rs
tests/fixtures/: TcBook_info.json
tests/fixtures/2024-05-01/: 改造艦船_テーブル.txt
tests/fixtures/2024-06-09/: BlueprintList_info.json
tests/fixtures/2024-06-10/: BlueprintList_info.json  TcBook_info.json
tests/fixtures/2024-06-20/: TcBook_info.json
tests/fixtures/2024-06-23/: TcBook_info.json
tests/fixtures/2024-06-28/: BlueprintList_info.json  Place_places.json  TcBook_info.json
tests/fixtures/2024-06-30/: BlueprintList_info.json  Place_districts.json  TcBook_info.json  kanmusu_list.json
tests/fixtures/2024-07-01/: BlueprintList_info.json  Place_places.json  TcBook_info.json
tests/fixtures/2024-07-02/: BlueprintList_info.json  TcBook_info.json
tests/fixtures/2024-09-02/: 艦船_テーブル.txt
tests/fixtures/2024-09-08/: 艦船_テーブル.txt
tests/fixtures/latest/: Area_captureInfo.json  BlueprintList_info.json  CharacterList_info.json  Cop_checkreward.json  EpFes_hold.json  EpFes_progress.json  EquipBook_info.json  EquipList_info.json  Event_hold.json  Exercise_info.json  NCamp_info.json  Personal_basicInfo.json  Place_places.json  Quest_info.json  Ranking_monthly_current.json  Ranking_monthly_prev.json  Ranking_total.json  RoomItemList_info.json  TcBook_info.json  TcError_dispFlag.json  kanmusu_list.json
