[package]
name = "kancolle-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9.12", features = ["dull-color"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive-getters = "0.4.0"
itertools = "0.13.0"
kml = { version = "0.8.5", default-features = false }
lazy-static-include = "3.2.1"
reqwest = { version = "0.12.5", features = ["blocking", "cookies"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
chrono-tz = "0.9.0"
