[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
authors = ["Paul \"TBBle\" Hampson <Paul.Hampson@Pobox.com>"]
version = "0.1.0"
repository = "https://github.com/TBBle/kancolle-a"
license = "MIT OR Apache-2.0"
