[package]
name = "kancolle-a-cli-tools"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9.12", features = ["dull-color"] }
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.13.0"
jsonxf = "1.1.1"
kancolle-a = { version = ">0.0.0", path = "../kancolle-a" }
kml = { version = "0.8.5", default-features = false }
strum = { version = "0.26.3" }
