[package]
name = "kancolle-a-cli-tools"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
bpaf = { version = "0.9.15", features = ["dull-color"] }
chrono = { version = "0.4.39", features = ["serde"] }
itertools = "0.14.0"
jsonxf = "1.1.1"
kancolle-a = { version = ">0.0.0", path = "../kancolle-a" }
kml = { version = "0.8.7", default-features = false }
rpassword = "7.3.1"
strum = { version = "0.26.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.43.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
