[package]
name = "kancolle-a"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
csv = "1.3.1"
derive-getters = "0.5.0"
itertools = "0.14.0"
lazy-static-include = "3.2.1"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
url = "2.5.4"

[dev-dependencies]
chrono-tz = "0.10.1"
