[package]
name = "kancolle-a"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
csv = "1.3.1"
derive-getters = "0.5.0"
itertools = "0.14.0"
lazy-static-include = "3.2.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["cookies", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt"] }
url = "2.5.4"

[dev-dependencies]
chrono-tz = "0.10.3"
